cmake_minimum_required(VERSION 3.17)
project(euler_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(euler_cpp src/main.cpp src/p2.cpp include/p2.h src/p1.cpp include/p1.h src/utils.cpp include/utils.h src/p3.cpp include/p3.h src/p4.cpp include/p4.h src/p5.cpp include/p5.h src/p6.cpp include/p6.h src/p7.cpp include/p7.h src/p8.cpp include/p8.h src/p9.cpp include/p9.h src/p10.cpp include/p10.h)